@@ -8,41 +8,41 @@ author: davidortinau
 ms.author: daortin
 ms.date: 06/02/2018
 ms.openlocfilehash: 9c9b9f5a205a2eef7db9f27e8d09b10ce65a4318
-ms.sourcegitcommit: 9ee02a2c091ccb4a728944c1854312ebd51ca05b
+ms.sourcegitcommit: b0ea451e18504e6267b896732dd26df64ddfa843
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/10/2020
+ms.lasthandoff: 04/13/2020
 ms.locfileid: "73027052"
 ---
 # <a name="adjusting-java-memory-parameters-for-the-android-designer"></a>Modifica dei parametri di memoria Java per Android Designer
 
-I parametri di memoria predefiniti usati quando si avvia il processo di `java` per la finestra di progettazione di Android potrebbero essere incompatibili con alcune configurazioni di sistema.
+I parametri di memoria predefiniti `java` utilizzati all'avvio del processo per la finestra di progettazione Android potrebbero essere incompatibili con alcune configurazioni di sistema.
 
-A partire da Xamarin Studio 5.7.2.7 (e versioni successive, Visual Studio per Mac) e Strumenti di Visual Studio per Novell 3.9.344, queste impostazioni possono essere personalizzate in base al progetto.
+A partire da Xamarin Studio 5.7.2.7 (e versioni successive, Visual Studio per Mac) e Visual Studio Tools per Xamarin 3.9.344, queste impostazioni possono essere personalizzate in base al progetto.
 
-## <a name="new-android-designer-properties-and-corresponding-java-options"></a>Nuove proprietà di Android designer e corrispondenti opzioni Java
+## <a name="new-android-designer-properties-and-corresponding-java-options"></a>Nuove proprietà della finestra di progettazione Android e le opzioni Java corrispondenti
 
-I nomi di proprietà seguenti corrispondono all'opzione della [riga di comando](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html) Java indicata
+I seguenti nomi di proprietà corrispondono all'opzione della [riga di comando](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html) java indicata
 
-- **AndroidDesignerJavaRendererMinMemory** -XMS
+- **AndroidDesignerJavaRendererMinMemory** -Xms
 
 - **AndroidDesignerJavaRendererMaxMemory** -Xmx
 
-- **AndroidDesignerJavaRendererPermSize** -XX: MaxPermSize
+- **AndroidDesignerJavaRendererPermSize** -XX:MaxPermSize
 
 # <a name="visual-studio"></a>[Visual Studio](#tab/windows)
 
 1. Aprire la soluzione in Visual Studio.
 
-2. Selezionare ogni progetto Android uno alla volta nel Esplora soluzioni e fare clic su [Mostra tutti i file](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)) due volte in ogni progetto. È possibile ignorare i progetti che non contengono file di layout `.axml`. Con questo passaggio si garantisce che ogni directory di progetto contenga un file di `.csproj.user`.
+2. Selezionare ogni progetto Android uno per uno in Esplora soluzioni e fare clic su [Mostra tutti i file](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)) due volte in ogni progetto. È possibile ignorare i progetti `.axml` che non contengono file di layout. Questo passaggio garantisce che `.csproj.user` ogni directory di progetto contenga un file.
 
 3. Uscire da Visual Studio.
 
-4. Individuare il file di `.csproj.user` per ogni progetto del passaggio 2.
+4. Individuare `.csproj.user` il file per ognuno dei progetti dal passaggio 2.
 
-5. Modificare ogni file di `.csproj.user` in un editor di testo.
+5. Modificare `.csproj.user` ogni file in un editor di testo.
 
-6. Aggiungere una o tutte le nuove proprietà di memoria di Android designer all'interno di un elemento `<PropertyGroup>`. È possibile usare un `<PropertyGroup>` esistente o crearne uno nuovo. Di seguito è riportato un esempio completo `.csproj.user` file che include tutti i 3 attributi impostati sui rispettivi valori predefiniti:
+6. Aggiungere una o tutte le nuove proprietà `<PropertyGroup>` di memoria della finestra di progettazione Android all'interno di un elemento. È possibile utilizzare `<PropertyGroup>` uno esistente o crearne uno nuovo. Ecco un file `.csproj.user` di esempio completo che include tutti e 3 gli attributi impostati sui valori predefiniti:Here's a complete example file that includes all 3 attributes set to their default values:
 
     ```xml
     <?xml version="1.0" encoding="utf-8"?>
@@ -58,29 +58,29 @@ I nomi di proprietà seguenti corrispondono all'opzione della [riga di comando](
     </Project>
     ```
 
-7. Salvare e chiudere tutti i file di `.csproj.user` aggiornati.
+7. Salvare e chiudere tutti `.csproj.user` i file aggiornati.
 
 8. Riavviare Visual Studio e riaprire la soluzione.
 
 # <a name="visual-studio-for-mac"></a>[Visual Studio per Mac](#tab/macos)
 
-1. Aprire la soluzione in Visual Studio per Mac per assicurarsi che la directory della soluzione contenga un file di `.userprefs`.
+1. Aprire la soluzione in Visual Studio per Mac `.userprefs` per assicurarsi che la directory della soluzione contenga un file.
 
-2. Uscire Visual Studio per Mac.
+2. Uscire da Visual Studio per Mac.
 
-3. Individuare il file di `.userprefs` nella directory della soluzione.
+3. Individuare `.userprefs` il file nella directory della soluzione.
 
-4. Modificare il file di `.userprefs` in un editor di testo.
+4. Modificare `.userprefs` il file in un editor di testo.
 
-5. Individuare l'elemento XML esistente con il formato seguente. L'ultima parte del nome di questo elemento corrisponderà al nome del progetto: "AndroidApplication1" in questo esempio:
+5. Individuare l'elemento XML esistente con il formato seguente. L'ultima parte di questo nome di elemento corrisponderà al nome del progetto: "AndroidApplication1" in questo esempio:The last part of this element name will match the name of your project: "AndroidApplication1" in this example:
 
     ```xml
     <MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >
     ```
 
-6. Se l'elemento `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` non esiste, crearlo in qualsiasi punto all'interno dell'elemento `<Properties>` di inclusione. Assicurarsi di sostituire "AndroidApplication1" con il nome del progetto.
+6. Se `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` l'elemento non esiste, crearlo `<Properties>` in un punto qualsiasi all'interno dell'elemento che lo contiene. Assicurarsi di sostituire "AndroidApplication1" con il nome del progetto.
 
-7. Aggiungere una o tutte le nuove proprietà di memoria di Android designer come attributi nell'elemento. Di seguito è riportato un esempio completo `.userprefs` file che include tutti i 3 attributi impostati sui rispettivi valori predefiniti:
+7. Aggiungere una o tutte le nuove proprietà di memoria della finestra di progettazione Android come attributi nell'elemento. Ecco un file `.userprefs` di esempio completo che include tutti e 3 gli attributi impostati sui valori predefiniti:Here's a complete example file that includes all 3 attributes set to their default values:
 
     ```xml
     <Properties StartupItem="AndroidApplication1\AndroidApplication1.csproj">
@@ -94,7 +94,7 @@ I nomi di proprietà seguenti corrispondono all'opzione della [riga di comando](
     </Properties>
     ```
 
-8. Ripetere i passaggi 5-7 per ogni progetto Android nella soluzione che contiene i file di layout `.axml`. (Ovvero, aggiungere un `<MonoDevelop.Ide.ItemProperties.ProjectName>` elemento per ogni progetto).
+8. Ripetere i passaggi da 5 a 7 per `.axml` ogni progetto Android nella soluzione che contiene i file di layout. (Ovvero, aggiungere `<MonoDevelop.Ide.ItemProperties.ProjectName>` un elemento per ogni progetto.)
 
 9. Salvare e chiudere il file `.userprefs`.
 
